fixed pictures overflowing on feed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,25 @@
 *{
     box-sizing: border-box;
     font-size: 62.5%;
+    font-family: 'Roboto', sans-serif;
 }
 
 body{
     background-color: #030303;
     color: white;
+    font-family: 'Roboto', sans-serif;
 }
+
+div{
+    font-family: 'Roboto', sans-serif;
+}
+
+p, h1, h2, h3, h4, h5, h6, span{
+    font-family: 'Roboto', sans-serif;
+}
+
+
+
 
 
 /* HEADER */
@@ -44,6 +57,7 @@ body{
 
 .feedContainer{
     width: 100%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,11 +65,39 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 
+.feedContentContainer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.profileSquareOnFeed{
+    height: 300px;
+    width: 300px;
+    background-color: #1A1A1B;
+    position: relative;
+    right: 300px;
+}
+
+.feedBody{
+    display: flex;
+    justify-content: center;
+}
+
+
+
 .feedPost{
-    width: 750px;
-    height: 600px;
+    width: 1100px;
+    /* height: 850px; */
     background-color: #1A1A1B;
     display: flex;
+}
+
+.feedImgContainer{
+    width: 100%;
+    height: 80%;
+    overflow: hidden;
 }
 
 .likesBar{
@@ -67,10 +109,44 @@ body{
     background-color: #151515;
 }
 
+.likesArrowsContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3px;
+}
+
 .feedImg{
    width: 100%;
+    /* height: 100%; */
+}
+
+.voteArrow{
+    font-size: 24px;
 }
 
 #feedTitle{
     font-size: 25px;
+    margin-top: 20px;
+    margin-left: 20px;
 }
+
+.feedIcon{
+    font-size: 24px;
+}
+
+.commentsAndShare{
+    /* border: 1px solid red; */
+    background-color: #151515;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.feedIconContainer{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
